add larry the platform operator

--- a/data/personas.yml
+++ b/data/personas.yml
@@ -28,3 +28,33 @@ personas:
       - Having to do things "the old way" because that thing isn't on PCF.
       - Too many tools and services to keep track of outside of PCF.
     attribution: None (Scott L'Hommedieu) 
+  - display_name: Larry Lipton
+    title: Platform Operator
+    portrait: 'images/larry_lipton.png'
+    objective: **Keep apps and services running on the platform 
+    quote: If I had a nickle for every time I got paged because some developers app was down and it was their code I would not be on this persona list.
+    tools:
+      - ** Ops Man
+      - ** Bosh
+      - ** vmWare VCenter 
+    behaviors:
+      - Prefers Formal Communication Channels
+      - First Instict is "It's not my fault"
+      - Interfaces with Support from Tooling Providers
+      - Responsible for Resource Planning and Management
+      - Heavily Involved in Auditing
+      - Create and Enforce procedures and protocols
+      - Fight fires and manage follow up
+      - Responsible for "keeping the lights on"
+    needs:
+      - To be proactive
+      - To reduce fires in my free time
+      - To reduce Noice, better filters
+      - To mitigate risks (not increase risks)
+      - To keep systems up to date
+      - To easily plan and manage capacity
+     frustrations
+      - Forced to be reactive
+      - Lack of visibility of root cause of incidents
+     attribution: https://drive.google.com/drive/u/1/folders/0B1l9uox07pdDLV9xNXBGOHh1aTA?ths=true
+
